fixed positioning of title section(z-index), added media query to improve responsiveness of title section

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ p{
 }
 
 .container-fluid{
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 #title{
@@ -66,12 +66,17 @@ padding: 0 18px;
 .title-img{
     width: 60%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 
 /* Features section */
 
 #features{
     padding: 7% 15%;
+    background-color: white;
+    position: relative;
+
 }
 
 .feature-box{
@@ -116,4 +121,34 @@ padding: 0 18px;
 .press-logo{
     width: 15%;
     margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+
+#pricing{
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column{
+    padding: 3% 2%;
+}
+
+/* Footer Section */
+
+
+
+/* Media Queries */
+@media (max-width: 1028px){
+
+    #title{
+        text-align: center;
+    }
+
+    .title-img{
+        position: static;
+        transform: rotate(0);
+    }
+
+
 }
